@@ -20,7 +20,6 @@
 	<developers>
 		<developer>
 			<name>Gregory Brown</name>
-			<email>gab@gabstudios.com</email>
 			<organization>GAB Studios</organization>
 			<organizationUrl>http://www.gabstudios.com</organizationUrl>
 		</developer>
@@ -49,7 +48,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.build.timestamp.format>yyyyMMddhhmm</maven.build.timestamp.format>
 		<sonar.projectKey>gab-studios_gab-validate</sonar.projectKey>
-		<sonar.organization>gab-studios</sonar.organization>
+  		<sonar.organization>gabrown001</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
@@ -99,7 +98,7 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>3.1.0</version>
 				<configuration>
-					<source>8</source>
+					<source>11</source>
 				</configuration>
 				<executions>
 					<execution>
@@ -136,10 +135,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
+				<version>3.14.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<release>11</release>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
@@ -154,6 +152,7 @@
 							<value>src/test/resources/logging.properties</value>
 						</property>
 					</systemProperties>
+					<argLine>--add-opens java.base/java.net=ALL-UNNAMED</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
